--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -33,3 +33,8 @@
 
   position: absolute;
 }
+
+#topNav ul li ul{
+  max-height:250px;/* you can change as you need it */
+  overflow:auto;/* to get scroll */
+}
