--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -67,7 +67,7 @@
             <span (click)="hideSideBar(!hide)" class="menu-collapsed">Informazioni personali</span>
           </a>
           <a [routerLink]="['/reserved-area/' + userStringType +'/payment-details']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Dettaglio Pagamenti</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Dati di fatturazione</span>
           </a>
           <a class="list-group-item list-group-item-action text-secondary">
             <span (click)="hideSideBar(!hide)"  class="menu-collapsed">Ricevute</span>
