--- a/src/app/features/reserved-area/payment-details/payment-details.component.html
+++ b/src/app/features/reserved-area/payment-details/payment-details.component.html
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
           <img src="assets/img/avatars/7.jpg" alt="Add new coupon" style="width:50px; float:left; margin-right:30px"/>
-          <h6 class="display-4" style="float:left; font-size:30pt;">Aggiorna dettagli del pagamento</h6>
+          <h6 class="display-4" style="float:left; font-size:30pt;">Aggiorna dati di fatturazione</h6>
         </div>
         <div class="p-4" *ngIf="user !== null">
           <form [formGroup]="updateRegistration" (ngSubmit)="onSubmit()">
