--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -50,7 +50,7 @@
           </div>
 
           <div class="modal-body">
-            Are you sure to delete this coupon? This operation is not reversable!
+            Sei sicuro di cancellare questo coupon? Questa operazione non è reversibile!
           </div>
 
           <div class="modal-footer">
