--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="float-right">
       <span>
-        Offerto da
+        Realizzato da
         <a href="https://www.unica.it/unica/it/dip_matinfo.page" target="_blank">
           Dipartimento di Matematica e Informatica
         </a>
@@ -15,6 +15,6 @@
 
   <div *ngIf="!isDesktop" class="w-100 bg-white text-center py-1">
       <p class="w-100"><a href="https://www.sardcoin.eu">SardCoin</a> © {{this.copyrightYear}} UniCA</p>
-      <p class="w-100">Offerto da <a href="https://www.unica.it/unica/it/dip_matinfo.page" target="_blank">UniCA - DMI</a></p>
+      <p class="w-100">Realizzato da <a href="https://www.unica.it/unica/it/dip_matinfo.page" target="_blank">UniCA - DMI</a></p>
   </div>
 <!--</footer>-->
