--- a/src/app/features/authentication/register/register.component.html
+++ b/src/app/features/authentication/register/register.component.html
@@ -3,8 +3,8 @@
     <div class="col-md-8 offset-md-2 mt-1">
       <div class="card mx-4">
         <div class="card-body p-4">
-          <h1 class="text-center">Register</h1>
-          <p class="text-info text-muted text-center">Create your account</p>
+          <h1 class="text-center">Registrazione</h1>
+          <p class="text-info text-muted text-center">Crea il tuo account</p>
           <app-feature-authentication-register-form></app-feature-authentication-register-form>
         </div>
 
