--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -40,7 +40,7 @@
 
         <div *ngIf="this.userType == '3' || this.userType == '0' || this.userType == '1'">
           <a [routerLink]="['/reserved-area/verifier']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Redimi coupon</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Vidima coupon</span>
           </a>
         </div>
 
