--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="couponPass !== null" class="container-fluid px-0">
   <!--<div class="row">-->
-    <div class="col-lg-8 col-md-10 col-sm-12 pl-md-0">
+    <div class="col-lg-6 col-md-10 col-sm-12 pl-md-0">
       <div [class]="classMx4" style="padding: 5px">
         <img class="card-img-top crop centered-and-cropped" src="{{imageURL + couponPass.image}}" alt="Card image cap">
         <div class="card-body p-4">
@@ -28,7 +28,7 @@
           </p>
 
           <button class="btn btn-danger btn-retry mr-2" (click)="retry()"><i class="fas fa-arrow-circle-left"></i> I miei acquisti</button>
-          <button class="btn btn-success btn-retry" (click)="openModal(qrModal)">Utilizza</button>
+          <button class="btn btn-success btn-retry" (click)="openModal(qrModal)">Ottieni codice</button>
         </div>
 
       </div>
@@ -41,6 +41,7 @@
     <button type="button" class="close pull-right mb-4" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
+    <h3 class="mb-3">Codice coupon: {{couponPass.token.token}}</h3>
     <qrcode class="d-table mx-auto" [qrdata]="couponPass.token" [size]="qrSize" [level]="'L'"></qrcode>
   </div>
 </ng-template>
