--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -4,10 +4,73 @@
       <div class="card">
         <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
           <img src="assets/img/add_coupon.png" alt="Add new coupon" style="width:50px; float:left; margin-right:30px"/>
-          <h6 class="display-4" style="float:left; font-size:30pt;">Verifica Coupon</h6>
+          <h6 class="display-4" style="float:left; font-size:30pt;">Vidima coupon</h6>
         </div>
         <div class="card-body p-5">
           <form [formGroup]="tokenForm" (ngSubmit)="verifier()">
+            <div class="form-group row">
+              <label class="col-lg-3 col-md-4 col-sm-3 col-form-label text-sm-left text-center">Inserisci il token</label>
+              <div class="col-lg-3 col-md-4 col-sm-3">
+                <input type="text" formControlName="token" class="form-control"
+                       [ngClass]="{ 'is-invalid': submitted && f.token.errors }"/>
+                <div *ngIf="submitted && f.token.errors " class="invalid-feedback">
+                  <div *ngIf="f.token.errors">Inserisci un token valido!</div>
+                </div>
+              </div>
+
+              <div class="col-lg-2 col-md-2 col-sm-2 text-center">
+                <h5>oppure</h5>
+              </div>
+
+              <div class="w-100 d-lg-none d-md-block d-none"></div>
+
+              <div class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center">
+                <button class="btn btn-primary" (click)="scan()">Scansiona il QR code</button>
+              </div>
+
+            </div>
+
+            <div style="padding-bottom: 1em" class="col">
+              <div *ngIf="isScan">
+                <div *ngIf="availableDevices">
+                  <select
+                    class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center"
+                    (change)="onDeviceSelectChange($event.target.value)">
+                    <option
+                      class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center"
+                      value="" [selected]="!selectedDevice">Seleziona
+                    </option>
+                    <option
+                      class="col-lg-2 col-md-3 col-sm-3 offset-xl-0 offset-md-0 mt-xl-0 mt-lg-0 text-sm-left text-center"
+                      *ngFor="let device of availableDevices" [value]="device.deviceId"
+                      [selected]="selectedDevice && device.deviceId === selectedDevice.deviceId">{{ device.label }}
+                    </option>
+                  </select>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-sm-6 mb-4 rounded container d-flex align-items-center justify-content-center bg-hover" (click)="scan()" style="background-color: #eee;">
+              <div *ngIf="!selectedDevice" class="position-absolute"><i class="fas fa-3x fa-camera"></i></div>
+              <zxing-scanner
+                #scanner style="margin-top: 5px;" class="test-class" start="true" [device]="selectedDevice"
+                (scanSuccess)="handleQrCodeResult($event)">
+              </zxing-scanner>
+            </div>
+
+            <div class="col-md-12 text-center p-0">
+              <button *ngIf="desktopMode" class="btn btn-lg btn-success"><i
+                class="fas fa-plus-circle mr-3"></i>Verifica
+              </button>
+            </div>
+            <div class="center text-center ">
+              <button *ngIf="!desktopMode" class="btn btn-lg btn-success"><i
+                class="fas fa-plus-circle mr-3"></i>Verifica
+              </button>
+            </div>
+          </form>
+<!--          <form [formGroup]="tokenForm" (ngSubmit)="verifier()">
             <div class="form-group row">
               <label class="col-lg-4 col-sm-4 col-form-label">Inserisci il Token</label>
               <div class="col-lg-4 col-sm-4">
@@ -19,51 +82,34 @@
                 </div>
               </div>
               <div class="form group col-lg-4 col-sm-4">
-                <p>
-                  <button class="btn btn-block btn-success btn-redeems">Verifica</button>
-                </p>
+                <button class="btn btn-block btn-success btn-redeems">Verifica</button>
               </div>
             </div>
-
-
-            <div>
-
-
-            </div>
-
-
           </form>
           <div class="form-group row">
-            <div  class="col-lg-8 col-sm-8">
+            <div class="col-lg-8 col-sm-8">
               <div *ngIf="isScan">
                 <div *ngIf="availableDevices">
                   <select (change)="onDeviceSelectChange($event.target.value)">
                     <option value="" [selected]="!selectedDevice">Seleziona</option>
                     <option *ngFor="let device of availableDevices" [value]="device.deviceId"
-                            [selected]="selectedDevice && device.deviceId === selectedDevice.deviceId">{{ device.label }}</option>
+                            [selected]="selectedDevice && device.deviceId === selectedDevice.deviceId">{{device.label}}
+                    </option>
                   </select>
                 </div>
-
               </div>
-
             </div>
             <div class="form group col-lg-4 col-sm-4">
-              <p>
-                <button class="btn btn-block btn-success btn-redeems" (click)="scan()">Scansiona il QR code</button>
-              </p>
+              <button class="btn btn-block btn-success btn-redeems" (click)="scan()">Scansiona il QR code</button>
             </div>
           </div>
           <div class="form-group row">
-            <zxing-scanner  #scanner class="test-class" start="true" [device]="selectedDevice" (scanSuccess)="handleQrCodeResult($event)"></zxing-scanner>
-
-          </div>
+            <zxing-scanner #scanner class="test-class" start="true" [device]="selectedDevice"
+                           (scanSuccess)="handleQrCodeResult($event)"></zxing-scanner>
+          </div>-->
         </div>
-
       </div>
-
-
     </div>
-
   </div>
 </div>
 
