--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -148,14 +148,14 @@
 </div>
 <ng-template #template>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Esci</h4>
+    <h4 class="modal-title pull-left">Logout</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
 
   <div class="modal-body">
-    <p>Se Esci, perderai il contenuto del carrello.</p>
+    <p>Attenzione: effettuando il logout perderai il contenuto del carrello.</p>
   </div>
 
   <div class="modal-footer">
