--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -3,12 +3,11 @@
     <div class="col-lg-12 col-xl-12">
       <div class="card">
         <div class="card-header" style="background:#e0e0e0">
-          <i class="fas fa-money-bill-wave fa-4x float-left"></i>
           <h6 class="display-4" style="font-size:30pt;">Riepilogo dell'ordine</h6>
         </div>
         <div class="card-body p-4 b-b-1">
           <div class="container-fluid">
-            <h2 class="card-text">Coupons nel Carrello</h2>
+            <h2 class="card-text">Coupon nel Carrello</h2>
             <table class="table table-striped">
               <thead>
               <tr>
@@ -35,10 +34,10 @@
 
             </table>
             <div class="float-right">
-              <h4>Importo totale: {{totalAmount}}</h4>
+              <h4>Importo totale: € {{totalAmount}}</h4>
             </div>
 
-            <h2 class="card-text mt-5">I tuoi dati</h2>
+            <h2 class="card-text mt-5">Dati fatturazione</h2>
 
             <p><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
             <p><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
@@ -63,7 +62,7 @@
 
 <ng-template #template>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Pagamento Numero #236748227</h4> <!-- TODO: fix order number -->
+    <h4 class="modal-title pull-left">Pagamento n. #236748227</h4> <!-- TODO: fix order number -->
     <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
