--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12 col-xl-9">
       <div class="card">
         <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
-          <img src="assets/img/add_coupon.png" alt="Add new coupon" style="width:50px; float:left; margin-right:30px"/>
+          <img src="assets/img/add_coupon.png" alt="Vidima coupon" style="width:50px; float:left; margin-right:30px"/>
           <h6 class="display-4" style="float:left; font-size:30pt;">Vidima coupon</h6>
         </div>
         <div class="card-body p-5">
