--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="couponPass !== null" class="container-fluid px-0">
   <!--<div class="row">-->
-    <div class="col-lg-6 col-md-10 col-sm-12 pl-md-0">
+    <div class="col-xl-6 col-lg-10 col-md-10 col-sm-12 pl-md-0">
       <div [class]="classMx4" style="padding: 5px">
         <img class="card-img-top crop centered-and-cropped" src="{{imageURL + couponPass.image}}" alt="Card image cap">
         <div class="card-body p-4">
