--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,86 +1,62 @@
-<!--<div style="padding-top: 20%" *ngIf="!hide || desktopMode " >-->
-<div class="padding-header sticky-top" *ngIf="desktopMode " > <!-- TODO to move to features the desktopMode -->
-  <div  id="sidebar-container"  class="sidebar-expanded  col-1-5 " *ngIf="isUserLoggedIn">
+<div  (mouseenter)="sendHideFalse()" (mouseleave)="sendHideTrue()"  class="padding-header sticky-top" *ngIf="desktopMode" > <!-- TODO to move to features the desktopMode -->
+  <div [ngStyle]="{'min-width': hide ? '20px' : '230px', 'max-width': hide ? '50px' : '230px'}"    id="sidebar-container"  class="sidebar-expanded  col-1-5 " *ngIf="isUserLoggedIn">
 
     <ul class="list-group sticky-top sticky-offset">
-      <li class="list-group-item sidebar-separator-title text-white d-flex align-items-center menu-collapsed">
-        <small class="font-weight-bold text-uppercase">Menu</small>
+      <li style=" " class="list-group-item sidebar-separator-title text-white d-flex align-items-center menu-collapsed">
+        <small *ngIf="!hide" class="font-weight-bold text-uppercase">Menu</small>
       </li>
 
-      <li class="list-group-item sidebar-separator-title text-white d-flex align-items-center menu-collapsed">
-        <span class="fas fa-archway mr-3"></span>
-        <span class="menu-collapsed">Contenuti</span>
-      </li>
+      <div *ngIf="this.userType == '1' || this.userType == '0'">
 
-      <div  class="  align-items-start padding-left-sidebar-item" aria-expanded="false">
-
-        <div *ngIf="this.userType == '1' || this.userType == '0'">
-          <a  [routerLink]="['/reserved-area/producer/list']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed ">I miei coupon</span>
-          </a>
-          <a [routerLink]="['/reserved-area/producer/create']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Aggiungi coupon</span>
-          </a>
-<!--          <a class="list-group-item list-group-item-action text-white text-secondary"> &lt;!&ndash;[routerLink]="['/reserved-area/producer/report']" &ndash;&gt;
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Reports</span>
-          </a>-->
-        </div>
-
-        <div *ngIf="this.userType == '2' || this.userType == '0'">
-          <a  [routerLink]="['/reserved-area/consumer/showcase']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Shopping</span>
-          </a>
-          <a [routerLink]="['/reserved-area/consumer/bought']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">I miei acquisti</span>
-          </a>
-          <a [routerLink]="['/reserved-area/consumer/coupon-import']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Importa coupon</span>
-          </a>
-        </div>
-
-        <div *ngIf="this.userType == '3' || this.userType == '0' || this.userType == '1'">
-          <a [routerLink]="['/reserved-area/verifier']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Vidima coupon</span>
-          </a>
-        </div>
-
-        <!--<a class="list-group-item list-group-item-action">-->
-          <!--<span class="menu-collapsed text-secondary">Altro da Aggiungere</span>-->
-        <!--</a>-->
+        <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
+          <span class="fas fa-archway mr-3"></span>
+          <span *ngIf="!hide" class="menu-collapsed">I miei coupon</span>
+        </a>
+        <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
+          <span class="fas fa-archway mr-3"></span>
+          <span *ngIf="!hide" class="menu-collapsed">Aggiungi coupon</span>
+        </a>
+        <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
+          <span class="fas fa-archway mr-3"></span>
+          <span *ngIf="!hide" class="menu-collapsed">Reports</span>
+        </a>
       </div>
+      <div *ngIf="this.userType == '2' || this.userType == '0'">
 
+        <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
+          <span class="fas fa-archway mr-3"></span>
+          <span *ngIf="!hide" class="menu-collapsed">Shopping</span>
+        </a>
+        <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
+          <span class="fas fa-archway mr-3"></span>
+          <span *ngIf="!hide" class="menu-collapsed">I miei acquisti</span>
+        </a>
+        <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
+          <span class="fas fa-archway mr-3"></span>
+          <span *ngIf="!hide" class="menu-collapsed">Importa coupon</span>
+        </a>
+      </div>
+      <div *ngIf="this.userType == '3' || this.userType == '0' || this.userType == '1'">
+        <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
+          <span class="fas fa-archway mr-3"></span>
+          <span *ngIf="!hide" class="menu-collapsed">Vidima coupon</span>
+        </a>
+      </div>
       <div *ngIf="this.userType != '3'">
-        <li class="list-group-item sidebar-separator-title text-white d-flex align-items-center menu-collapsed">
-          <span class="fa fa-user fa-fw mr-3"></span>
-          <span  class="menu-collapsed">Il mio profilo</span>
-        </li>
-        <!-- Submenu content -->
-        <div  class="padding-left-sidebar-item align-items-start">
-          <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Informazioni personali</span>
-          </a>
-          <a [routerLink]="['/reserved-area/' + userStringType +'/payment-details']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Dati di fatturazione</span>
-          </a>
-          <a class="list-group-item list-group-item-action text-secondary">
-            <span (click)="hideSideBar(!hide)"  class="menu-collapsed">Ricevute</span>
-          </a>
-        </div>
+
+        <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
+          <span class="fas fa-archway mr-3"></span>
+          <span *ngIf="!hide" class="menu-collapsed">Informazioni personali</span>
+        </a>
+        <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
+          <span class="fas fa-archway mr-3"></span>
+          <span *ngIf="!hide" class="menu-collapsed">Dati di fatturazione</span>
+        </a>
+        <a  [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white ">
+          <span class="fas fa-archway mr-3"></span>
+          <span *ngIf="!hide"  >Ricevute</span>
+        </a>
       </div>
-      <li class="list-group-item sidebar-separator menu-collapsed"></li>
-<!--      <a class="list-group-item list-group-item-action">
-        <div class="d-flex w-100 justify-content-start align-items-center">
-          <span class="fa fa-question fa-fw mr-3"></span>
-          <span class="menu-collapsed text-secondary">Aiuto</span>
-        </div>
-      </a>
-      <a data-toggle="sidebar-collapse"
-         class="list-group-item list-group-item-action d-flex align-items-center">
-        <div class="d-flex w-100 justify-content-start align-items-center">
-          <span id="collapse-icon" class="fa fa-arrow-left fa-fw mr-3"></span>
-          <span id="collapse-text" class="menu-collapsed text-secondary">Riduci</span>
-        </div>
-      </a>-->
     </ul>
   </div>
 </div>
