--- a/src/app/features/feature.component.html
+++ b/src/app/features/feature.component.html
@@ -2,8 +2,8 @@
 <div class="row" id="body-row">
   <app-core-sidebar *ngIf="desktopMode && (loginData | async)"></app-core-sidebar>
 
-  <div class="px-0" id="main-content" [ngStyle]="{'margin-left': ((loginData | async) && desktopMode) ? '230px' : '0'}">
-    <app-core-breadcrumb ></app-core-breadcrumb>
+  <div class="px-0" id="main-content" [ngStyle]="{'margin-left': ((loginData | async) && desktopMode ) ? width : '0'}">
+    <app-core-breadcrumb  ></app-core-breadcrumb>
     <div id="main-container"> <!-- levato container-fluid -->
       <router-outlet></router-outlet>
     </div>
