--- a/src/app/core/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/breadcrumb/breadcrumb.component.html
@@ -1,9 +1,11 @@
 <nav   class=" fixed-desktop" aria-label="breadcrumb"  *ngIf="isUserLoggedIn">
-  <ol   class="breadcrumb border border-info border-left-0 border-right-0 col-lg-12">
-    <ng-container class="col-lg-4" *ngIf="desktopMode && isUserLoggedIn">
-      <li *ngFor="let item of breadList" class="breadcrumb-item">
+  <ol   class="breadcrumb border border-info border-left-0 border-right-0 ">
+    <ng-container  *ngIf="desktopMode && isUserLoggedIn">
+
+      <li  *ngFor="let item of breadList" class="breadcrumb-item">
         <a [routerLink]="[item.url]">{{item.label}}</a>
       </li>
+
     </ng-container>
     <select style="height: 3em;"  class="custom-select mb-2 mr-sm-2 mb-sm-0 col-5" *ngIf="!desktopMode" (change)="navigateTo($event.target.value)">
       <option ><a selected>Seleziona...</a></option>
@@ -12,12 +14,12 @@
       </option>
     </select>
 
-    <ng-container class="col-8" *ngIf="desktopMode && usetType == 2">
-      <div  class="ml-auto my-auto cursor-pointer cart-div" (click)="viewCart()" style="margin-right:18em">
-        <a *ngIf="cart.length === 0">Il tuo carrello <b class="text-info">è vuoto</b>! </a>
-        <a class="text-dark" routerLink="/reserved-area/consumer/cart" *ngIf="cart.length > 0 && desktopMode">
+    <ng-container  *ngIf="desktopMode && usetType == 2">
+      <div  style="margin-right: 0px  !important;"  (click)="viewCart()" >
+        <a class="fixed-cart-desktop"  *ngIf="cart.length === 0">Il tuo carrello <b class="text-info">è vuoto</b>! </a>
+        <a  class="text-dark col-lg-8 fixed-cart-desktop" routerLink="/reserved-area/consumer/cart" *ngIf="cart.length > 0 && desktopMode">
 
-           {{cart.length === 1 ? "C'è" : 'Ci sono'}} <b class="text-info">{{cart.length}} {{cart.length === 1 ? 'coupon' : 'coupons'}}</b> nel tuo carrello.
+           {{cart.length === 1 ? "C'è" : 'Ci sono 100'}} <b class="text-info">{{cart.length}} {{cart.length === 1 ? 'coupon' : 'coupons'}}</b> nel tuo carrello.
           <!-- english version -->
           <!--There {{cart.length === 1 ? 'is' : 'are'}} <b class="text-info">{{cart.length}} item{{cart.length === 1 ? '' : 's'}}</b> in your cart. Checkout now!-->
           <i style="font-size: 1.5em !important;" class="fas fa-shopping-cart text-warning"></i>
