fixed cart in breadcrumb done

--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -38,3 +38,24 @@
   max-height:250px;/* you can change as you need it */
   overflow:auto;/* to get scroll */
 }
+
+.image-center {
+  /*left: 50%;*/
+  /*position: fixed;*/
+}
+.center-block {
+  position: fixed;
+  display: block;
+  left: 50%;
+
+
+
+}
+
+
+.crop-logo {
+  width: 200px;
+  height: 30px;
+
+}
+
