--- a/src/app/core/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/breadcrumb/breadcrumb.component.html
@@ -6,6 +6,7 @@
         <a [routerLink]="[item.url]">{{item.label}}</a>
       </li>
 
+
     </ng-container>
     <select style="height: 3em;"  class="custom-select mb-2 mr-sm-2 mb-sm-0 col-5" *ngIf="!desktopMode" (change)="navigateTo($event.target.value)">
       <option ><a selected>Seleziona...</a></option>
@@ -13,20 +14,20 @@
         <a *ngIf="item !== 'undefined'">{{item.label}}</a>
       </option>
     </select>
+    <div class="col"  [ngStyle]="{'margin-right': hide && userType == 2 ? '50px' : '230px', 'text-align': 'right'}" >
+      <ng-container *ngIf="desktopMode && userType == 2">
+        <div   (click)="viewCart()" >
+          <a   *ngIf="cart.length === 0">Il tuo carrello <b class="text-info">è vuoto</b>! </a>
+          <a class="text-dark col-lg-8" routerLink="/reserved-area/consumer/cart" *ngIf="cart.length > 0 && desktopMode">
 
-    <ng-container  *ngIf="desktopMode && usetType == 2">
-      <div  style="margin-right: 0px  !important;"  (click)="viewCart()" >
-        <a class="fixed-cart-desktop"  *ngIf="cart.length === 0">Il tuo carrello <b class="text-info">è vuoto</b>! </a>
-        <a  class="text-dark col-lg-8 fixed-cart-desktop" routerLink="/reserved-area/consumer/cart" *ngIf="cart.length > 0 && desktopMode">
+             {{cart.length === 1 ? "C'è" : 'Ci sono'}} <b class="text-info">{{cart.length}} {{cart.length === 1 ? 'coupon' : 'coupons'}}</b> nel tuo carrello.
+            <!-- english version -->
+            <!--There {{cart.length === 1 ? 'is' : 'are'}} <b class="text-info">{{cart.length}} item{{cart.length === 1 ? '' : 's'}}</b> in your cart. Checkout now!-->
+            <i style="font-size: 1.5em !important;" class="fas fa-shopping-cart text-warning"></i>
+          </a>
 
-           {{cart.length === 1 ? "C'è" : 'Ci sono 100'}} <b class="text-info">{{cart.length}} {{cart.length === 1 ? 'coupon' : 'coupons'}}</b> nel tuo carrello.
-          <!-- english version -->
-          <!--There {{cart.length === 1 ? 'is' : 'are'}} <b class="text-info">{{cart.length}} item{{cart.length === 1 ? '' : 's'}}</b> in your cart. Checkout now!-->
-          <i style="font-size: 1.5em !important;" class="fas fa-shopping-cart text-warning"></i>
-        </a>
-
-      </div>
-    </ng-container>
-
+        </div>
+      </ng-container>
+    </div>
   </ol>
 </nav>
