--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -91,7 +91,7 @@
       </nav>
     </div>
     <div class="rounded mx-auto d-block">
-      <img *ngIf="isDesktop" src="assets/img/brand/sardcoin-logo.png" class="crop-logo">
+      <img style="margin-left: 260px" *ngIf="isDesktop" src="assets/img/brand/sardcoin-logo.png" class="crop-logo">
     </div>
     <div *ngIf="!isDesktop" class="left col-4">
       <img src="assets/img/brand/sardcoin-logo.png" class="img-fluid logo-img">
