--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -94,7 +94,7 @@
       <img style="margin-left: 260px" *ngIf="isDesktop" src="assets/img/brand/sardcoin-logo.png" class="crop-logo">
     </div>
     <div *ngIf="!isDesktop" class="left col-4">
-      <img src="assets/img/brand/sardcoin-logo.png" class="img-fluid logo-img">
+      <img  src="assets/img/brand/sardcoin-logo.png" class="crop-logo-small">
     </div>
 
 
