--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -13,47 +13,47 @@
           <span  class="menu-collapsed">I miei coupon</span>
         </a>
         <a [routerLink]="['/reserved-area/producer/create']" class="list-group-item list-group-item-action text-white">
-          <span class="fas fa-plus-circle mr-3 icon-dimension"></span>
+          <span class=" img-fluid fas fa-plus-circle mr-3 icon-dimension"></span>
           <span  class="menu-collapsed">Aggiungi coupon</span>
         </a>
         <a [routerLink]="['/reserved-area/producer/report']" class="list-group-item list-group-item-action text-white">
-          <span class="fas fa-file-contract mr-3 icon-dimension"></span>
+          <span class=" img-fluid fas fa-file-contract mr-3 icon-dimension"></span>
           <span  class="menu-collapsed">Reports</span>
         </a>
       </div>
       <div *ngIf="this.userType == '2' || this.userType == '0'">
 
         <a [routerLink]="['/reserved-area/consumer/showcase']" class="list-group-item list-group-item-action text-white">
-          <span class="fas fa-shopping-bag mr-3 icon-dimension"></span>
+          <span class="  img-fluid fas fa-shopping-bag mr-3 icon-dimension"></span>
           <span *ngIf="!hide || userType == '0'" class="menu-collapsed">Shopping</span>
         </a>
         <a [routerLink]="['/reserved-area/consumer/bought']" class="list-group-item list-group-item-action text-white">
-          <span class="fas fa-shopping-basket mr-3 icon-dimension"></span>
+          <span class=" img-fluid fas fa-shopping-basket mr-3 icon-dimension"></span>
           <span *ngIf="!hide || userType == '0'" class="menu-collapsed">I miei acquisti</span>
         </a>
         <a [routerLink]="['/reserved-area/consumer/coupon-import']" class="list-group-item list-group-item-action text-white">
-          <span class="fas fa-file-import mr-3 icon-dimension"></span>
+          <span class=" img-fluid fas fa-file-import mr-3 icon-dimension"></span>
           <span *ngIf="!hide || userType == '0' " class="menu-collapsed">Importa coupon</span>
         </a>
       </div>
       <div *ngIf="this.userType == '3' || this.userType == '0' || this.userType == '1'">
         <a [routerLink]="['/reserved-area/verifier']" class="list-group-item list-group-item-action text-white">
-          <span class="fas fa-stamp mr-3 icon-dimension"></span>
+          <span class=" img-fluid fas fa-stamp mr-3 icon-dimension"></span>
           <span  class="menu-collapsed">Vidima coupon</span>
         </a>
       </div>
       <div *ngIf="this.userType != '3'">
 
         <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']" class="list-group-item list-group-item-action text-white">
-          <span class="fas fa-user  mr-3 icon-dimension"></span>
+          <span class=" img-fluid fas fa-user  mr-3 icon-dimension"></span>
           <span *ngIf="!hide || userType == '0' || userType == '1'" class="menu-collapsed">Informazioni personali</span>
         </a>
         <a [routerLink]="['/reserved-area/' + userStringType +'/payment-details']" class="list-group-item list-group-item-action text-white">
-          <span class="fas fa-file-invoice  mr-3 icon-dimension"></span>
+          <span class=" img-fluid fas fa-file-invoice  mr-3 icon-dimension"></span>
           <span *ngIf="!hide || userType == '0' || userType == '1'" class="menu-collapsed">Dati di fatturazione</span>
         </a>
         <a  class="list-group-item list-group-item-action text-white ">
-          <span class="fas fa-receipt  mr-3 icon-dimension"></span>
+          <span class=" img-fluid fas fa-receipt  mr-3 icon-dimension"></span>
           <span *ngIf="!hide || userType == '0' || userType == '1'"  >Ricevute</span>
         </a>
       </div>
