--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -90,11 +90,11 @@
       </div>
       </nav>
     </div>
-    <div class="rounded mx-auto d-block  img-fluid">
-      <img style="margin-left: 260px" *ngIf="isDesktop" src="assets/img/brand/sardcoin-logo.png" class="crop-logo">
+    <div class="rounded mx-auto d-block ">
+      <img style="margin-left: 260px" *ngIf="isDesktop" src="assets/img/brand/sardcoin-logo-full.png" class="crop-logo   img-fluid">
     </div>
     <div *ngIf="!isDesktop" class="left col-4">
-      <img  src="assets/img/brand/sardcoin-logo.png  img-fluid" class="crop-logo-small">
+      <img  src="assets/img/brand/sardcoin-logo-full.png  " class="img-fluid crop-logo-small">
     </div>
 
 
