--- a/src/app/core/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/breadcrumb/breadcrumb.component.html
@@ -20,7 +20,7 @@
           <a   *ngIf="cart.length === 0">Il tuo carrello <b class="text-info">è vuoto</b>! </a>
           <a class="text-dark col-lg-8" routerLink="/reserved-area/consumer/cart" *ngIf="cart.length > 0 && desktopMode">
 
-             {{cart.length === 1 ? "C'è" : 'Ci sono'}} <b class="text-info">{{cart.length}} {{cart.length === 1 ? 'coupon' : 'coupons'}}</b> nel tuo carrello.
+             {{cart.length === 1 ? "c'è" : 'ci sono'}} <b class="text-info">{{cart.length}} {{cart.length === 1 ? 'coupon' : 'coupons'}}</b> nel tuo carrello.
             <!-- english version -->
             <!--There {{cart.length === 1 ? 'is' : 'are'}} <b class="text-info">{{cart.length}} item{{cart.length === 1 ? '' : 's'}}</b> in your cart. Checkout now!-->
             <i style="font-size: 1.5em !important;" class="fas fa-shopping-cart text-warning"></i>
