--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -136,7 +136,7 @@ app-core-sidebar {
 }
 
 #sidebar-container .list-group a.list-group-item:hover {
-  background-color: #20a8d8;
+  background-color: revert;
 }
 
 .list-group-item {
